changed name to prevent overlap

--- a/src/pages/Sign_up/Salon_registration.css
+++ b/src/pages/Sign_up/Salon_registration.css
@@ -273,7 +273,7 @@
     margin-top: 20px;
 }
 
-.back-button {
+.back-button-salon-registration {
     font-size: 20px;
     color: #FFFFFF;
     background: #999999;
